Changes in Paladin 1.4

New Features
The luare command has been added -- a sed replacement which uses Lua regular expressions.
Project-wide file search and replace...FINALLY.

User Interface
Files are now sorted first by type and then by name
New files or new file pairs added via Add New File are automatically added to source control
Changed key accelerators for common source control from Control + Alt to Control + Alt + Shift due to the newly-added window management shortcuts which clash with the old ones
When files are added or removed from the repo via the GUI, their partner files are also added/removed.
Control + Alt + Shift + Up/Down are used to push to/pull from remote repositories
Add New File now includes templates for .rsrc resource files, generic text files, and bash shell scripts.
Added an option to choose whether or not header files are automatically added to projects.
Better build feedback when Paladin is used to build from the command line
Wording in certain parts of the interface has been clarified
Project is re-linked only when necessary instead of each time the Make command is invoked
Some project templates are automatically generated if the Templates folder is missing

Bugfixes
Fixed a problem with files dropped from Tracker
Shell scripts are now executed properly
Automatically adjust types on .rsrc files so Edit Program Settings always works right.
File counts during project builds are displayed properly on multicore machines
Scrollbar range is fixed in the Libraries window

Internal changes
Removed some hardcoded paths from certain parts of the code
The shell scripts used to build the suite have been made to dynamically build all C++ files in the Paladin folder.
Some Paladin features depend on the existence of the Lua language and are disabled if it is not installed.